[gd_scene load_steps=4 format=3 uid="uid://duhpwtfo3k0sk"]

[ext_resource type="Script" path="res://addons/block_code/ui/picker/categories/block_category_display.gd" id="1_wkdht"]
[ext_resource type="Texture2D" uid="uid://bbrwk6kgyo8cs" path="res://addons/block_code/ui/picker/categories/expander.png" id="2_qrgdt"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wrrda"]
resource_local_to_scene = true
atlas = ExtResource("2_qrgdt")
region = Rect2(1, 1, 16, 16)

[node name="BlockCategoryDisplay" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -918.0
offset_bottom = -246.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wkdht")

[node name="Background" type="ColorRect" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="Spacer" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 16
toggle_mode = true
text = "Category"
icon = SubResource("AtlasTexture_wrrda")
flat = true
alignment = 0
icon_alignment = 2

[node name="BlocksContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Spacer2" type="Control" parent="MarginContainer/VBoxContainer/BlocksContainer"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2

[node name="Blocks" type="VBoxContainer" parent="MarginContainer/VBoxContainer/BlocksContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 14

[node name="Spacer3" type="Control" parent="MarginContainer/VBoxContainer/BlocksContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2

[connection signal="toggled" from="MarginContainer/VBoxContainer/Button" to="." method="_on_button_toggled"]
